# eduwrench

./: .env  .env-eduwrench.ics.hawaii.edu-https-disco  .env-eduwrench.ics.hawaii.edu-https-its-vm  .env-local-http  .env-local-https  .env.local  .gitignore  .travis.yml  Dockerfile  Dockerfile_copy  README.md  _config.yml  build.sh  docker-compose.yml  docker.sh  index.html  package-lock.json
.github/workflows/: build-and-deploy.OLD  build-and-deploy.yml
OLD_DOCKERFILES/: Dockerfile  Dockerfile_clone
_data/: glossary.yml
_includes/: head.html  header.html  sidebar.html  simulator.html
_includes/partials/: input_non_workflow.html  inputs.html  simulation_parameters_form_end.html  simulation_parameters_form_start.html  workflow_execution_graph.html
_layouts/: default.html  page.html  simulation.html
_pages/: courses.md  glossary.html  glossary.md  setup.md
_pedagogic_modules/: IO_lesson.md  multi_core_computing.md  workflow_execution_data_locality.md  workflow_execution_parallelism.md  workflow_execution_resource_provisioning.md  workflow_fundamentals.md
_pedagogic_modules/include_networking_fundamentals/: contention.md  latency_and_bandwidth.md  topologies.md
_pedagogic_modules/include_single_core_computing/: timesharing.md
_posts/: 2019-10-10-welcome-to-jekyll.markdown
_sass/: _layout.scss  base.scss  course.scss  glossary.scss  index.scss  simulator.scss
_simulations/: io_operations.html  multi_core.html  networking_fundamentals.html  workflow_execution_data_locality.html  workflow_execution_fundamentals.html  workflow_execution_parallelism.html
_site/: 404.html  feed.xml  index.html
css/: main.scss
db/: eduwrench-server.db
nginx/: Dockerfile  cert.csr  cert.pem  custom-nginx-locations-common.conf  custom-nginx-port-443.conf  custom-nginx-port-80.conf  privkey.pem  privkey_no_pass.pem
public/: Vagrantfile
server/: Dockerfile  app.js  build-simulators.sh  database.sqlite3  dbHelpers.js  docker-server.sh  eduwrench-server.service  knexfile.js  package-lock.json  package.json  passport-setup.js
server/simulators/client_server/: CMakeLists.txt  client_server_simulator
server/simulators/client_server/include/: ActivityWMS.h
server/simulators/client_server/src/: ActivityWMS.cpp  Simulator.cpp
server/simulators/master_worker/: CMakeLists.txt  master_worker_simulator
server/simulators/master_worker/include/: ActivityWMS.h
server/simulators/master_worker/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp
server/simulators/multi_core_computing_independent_tasks/: CMakeLists.txt  multi_core_simulator
server/simulators/multi_core_computing_independent_tasks/include/: ActivityWMS.h
server/simulators/multi_core_computing_independent_tasks/src/: ActivityWMS.cpp  Simulator.cpp
server/simulators/thrustd/: CMakeLists.txt  README.md  fbl
server/simulators/thrustd/data/: pstate_values.txt
server/simulators/thrustd/script/: analyze_results.py  plot_results.py  run_all_experiments.py
server/simulators/thrustd/src/: ThrustDJobScheduler.cpp  ThrustDSimulator.cpp  ThrustDWMS.cpp  ThrustDWMS.h
server/simulators/thrustd/workflows/: bigger-montage-workflow.json  bigger-montage-workflow.json_OLD_FILE  montage-workflow.json  montage2-workflow.json
simulators/: .gitignore  Dockerfile
simulators/ci_overhead/: CMakeLists.txt  build.sh
simulators/ci_overhead/include/: ActivityWMS.h
simulators/ci_overhead/src/: ActivityWMS.cpp  Simulator.cpp
simulators/client_server/: CMakeLists.txt  build.sh
simulators/client_server/include/: ActivityScheduler.h  ActivityWMS.h
simulators/client_server/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp
simulators/google_cloud_functions/: CMakeLists.txt
simulators/google_cloud_functions/CMakeModules/: FindSimGrid.cmake
simulators/google_cloud_functions/data/platform-files/: hosts.xml
simulators/google_cloud_functions/src/: GcfJobScheduler.cpp  GcfJobScheduler.h  GcfSimulator.cpp  GcfWMS.cpp  GcfWMS.h  SimpleSimulator.cpp  SimpleStandardJobScheduler.cpp  SimpleWMS.cpp
simulators/google_cloud_functions/test_args/: args.json
simulators/io_operations/: ACTIVITY_1.cbp  CMakeLists.txt  build.sh
simulators/io_operations/include/: ActivityWMS.h
simulators/io_operations/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp
simulators/master_worker/: CMakeLists.txt  build.sh  script_to_run_experiments.py
simulators/master_worker/include/: ActivityScheduler.h  ActivityWMS.h
simulators/master_worker/master_worker_simulator.dSYM/Contents/: Info.plist
simulators/master_worker/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp
simulators/networking_fundamentals/: ACTIVITY_1.cbp  CMakeLists.txt  build.sh
simulators/networking_fundamentals/include/: ActivityWMS.h
simulators/networking_fundamentals/src/: ActivityWMS.cpp  Simulator.cpp
simulators/storage_network_proximity/: CMakeLists.txt
simulators/storage_network_proximity/include/: ActivityWMS.h
simulators/storage_network_proximity/src/: ActivityWMS.cpp  Simulator.cpp
simulators/storage_workflow_scheduling/: CMakeLists.txt
simulators/storage_workflow_scheduling/include/: ActivityWMS.h
simulators/storage_workflow_scheduling/src/: ActivityWMS.cpp  Simulator.cpp
simulators/thrustd/: CMakeLists.txt
simulators/thrustd/CMakeModules/: FindSimGrid.cmake
simulators/thrustd/script/: files_between_levels.cpp  run_all_experiments.py
simulators/thrustd/src/: ThrustDJobScheduler.cpp  ThrustDJobScheduler.h  ThrustDSimulator.cpp  ThrustDWMS.cpp  ThrustDWMS.h
simulators/thrustd/workflows/: bigger-montage-workflow.json  montage-workflow.json  montage2-workflow.json  seismology-workflow.json
simulators/workflow_task_data_parallelism/: CMakeLists.txt
simulators/workflow_task_data_parallelism/include/: ActivityWMS.h
simulators/workflow_task_data_parallelism/src/: ActivityWMS.cpp  Simulator.cpp
web/: Dockerfile  Gemfile  README.md  _config.yml  courses.md  for_students.md  for_teachers.md  gatsby-config.js  index.html  modules.md  package-lock.json  package.json  policy.md  textbooks.md
(+605 files in other folders)
